--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         margin:0;
         background: #fafafa;
       }
+      
+      .errors-wrapper
+      {
+          display: none !IMPORTANT;
+      }
     </style>
   </head>
 
